Ch 8 - Heatmap chart: Solved tooltip positioning. There is still an issue where since the year starts on a Monday the entire Sunday row is shifted over a column to the left. Going to try fixing that.

--- a/08-common-charts/heatmap/styles.css
+++ b/08-common-charts/heatmap/styles.css
@@ -19,6 +19,10 @@ svg {
     shape-rendering: crispedges;
 }
 
+.wrapper {
+    position: relative;
+}
+
 .day {
     transition: fill 0.3s ease-out;
 }
